src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --breakpoint-xs: 480px;
  --breakpoint-sm: 660px;
  --breakpoint-md: 840px;
  --breakpoint-lg: 1024px;
  --height-13: 3.25rem;
  --text-md: 1.0625rem;
  --border-width-1\.5: 1.5px;
  --text-h1: 2.5rem;
  --text-h2: 2rem;
  --text-h3: 1.5rem;
  --text-h4: 1.375rem;
}

@utility webkit-autofil-color-for-dark {
  -webkit-text-fill-color: oklch(92% 0.004 286.32);
}

@utility webkit-autofil-color-for-light {
  -webkit-text-fill-color: oklch(27.4% 0.006 286.033);
}

@utility heading-color {
  @apply text-zinc-800 dark:text-zinc-200;
}

@utility text-color {
  @apply text-zinc-600 dark:text-zinc-400;
}

@utility border-color {
  @apply border-zinc-200 dark:border-zinc-800;
}

@utility bg-default {
  @apply bg-zinc-100 dark:bg-zinc-900;
}

@utility bg-primary {
  @apply bg-zinc-200/50 dark:bg-zinc-800/50;
}

@utility bg-secondary {
  @apply bg-zinc-200 dark:bg-zinc-800;
}

@utility bg-warning {
  @apply text-yellow-900 dark:text-yellow-500 bg-yellow-500/20 dark:bg-yellow-500/10;
}

@utility btn-base {
  @apply font-medium h-13 px-5 relative rounded-2xl transition-all duration-300 flex items-center justify-center hover:rounded-3xl active:scale-95;
}

@utility hover-icon {
  @apply text-zinc-600 dark:text-zinc-400 hover:text-zinc-800 dark:hover:text-zinc-200 transition-all duration-300 active:scale-90;
}

@layer base {
  .dark {
    color-scheme: dark;
  }

  ::selection {
    @apply bg-teal-500 text-zinc-800;
  }

  body {
    @apply text-color bg-default w-full min-h-dvh relative overflow-x-hidden box-border;
  }

  .root {
    @apply w-full min-h-dvh relative flex flex-col items-center;
  }

  main {
    @apply w-full relative flex flex-col items-center justify-center flex-1;
  }

  button,
  a {
    cursor: pointer;
  }

  input:autofill,
  input:-webkit-autofill:hover,
  input:-webkit-autofill:focus,
  input:-webkit-autofill:active {
    @apply webkit-autofil-color-for-light dark:webkit-autofil-color-for-dark;
    transition: background-color 100000s ease-in-out 0s;
    box-shadow: none;
  }
}

@layer components {
  .btn-teal {
    @apply btn-base text-zinc-800 bg-teal-500;
  }

  .btn-zinc {
    @apply btn-base heading-color bg-secondary;
  }

  .on-hover-bg-icon {
    @apply hover-icon size-10 flex items-center justify-center rounded-xl hover:bg-primary;
  }

  .hover-icon svg {
    @apply w-5;
  }

  .on-hover-bg-icon svg {
    @apply w-5.5;
  }

  .h1 {
    @apply text-h1 font-bold heading-color;
  }

  .h2 {
    @apply text-h2 font-bold heading-color;
  }

  .h3 {
    @apply text-h3 font-bold heading-color;
  }

  .box-heading {
    @apply text-[28px] font-medium heading-color;
  }

  .box {
    @apply w-full max-w-md relative flex flex-col items-center text-center gap-4 border-2 border-color rounded-3xl p-12;
  }

  .input {
    @apply heading-color w-full px-4 py-3 h-13 flex items-center justify-center leading-none rounded-2xl outline-none transition-all duration-300 bg-primary focus-within:bg-secondary;
  }
}

